# slack_jamal_bot

./: .env.example  .env.jamal.sample  .env.james.sample  .env.ryan.sample  .env.sample  .gitignore  CLAUDE.md  LICENSE  PHASE5_RESULTS.md  README.md  SESSION_MANAGEMENT_SUMMARY.md  migration_dev.md  migration_plan.md  orchestrator_workflow.md  pyproject.toml  pytest.ini  run_agents.sh  session_management_dev.md  session_management_plan.md  stop_agents.sh
src/: config.py  main.py  main_debate.py
src/agents/jamal/: __init__.py  agent.py
src/agents/james/: __init__.py  agent.py
src/agents/ryan/: __init__.py  agent.py
src/bot/: message_processor.py  slack_handler.py
src/llm/: adk_agent.py  agent_roles.py
src/orchestrator/: __init__.py  debate_orchestrator.py
src/utils/: logger.py  session_registry.py
tests/: conftest.py  smoke_test.py  test_adk_agent.py  test_session_management.py
tests/integration/: test_slack_integration.py
tests/unit/: test_config.py  test_logger.py  test_message_processor.py  test_session_registry.py
