[project]
name = "slack-jamal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "feedparser>=6.0.12",
    "google-adk>=1.17.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.26.0",
    "slack-sdk>=3.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
